--- a/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
+++ b/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
@@ -40,7 +40,7 @@ Digitalizácia je veľmi dôležitá oblasť spojená s rýchlym rozvojom techno
 
 V dnešnej dobe je digitalizácia verejnej správy častou témou rôznych diskusií. Digitalizácia sľubuje využívanie efektívnejších, účinnejších a transparentnejších služieb v rôznych sektoroch \scr(Andersson, 2022).
 
-Existuje viacero spôsobov "merania" úrovne rozvinutosti krajín v oblasti digitalizácie a e-governmentu. Patrí medzi ne napríklad Index digitálnej ekonomiky a spoločnosti, Index rozvoja e-Governmentu, E-Government Benchmark a iné. V nasledujúcich kapitolách sú v skratke popísané spomínané 3 prieskumy a ich posledné výsledky.
+Existuje viacero spôsobov "merania" úrovne rozvinutosti krajín v oblasti digitalizácie a eGovernmentu. Patrí medzi ne napríklad Index digitálnej ekonomiky a spoločnosti, Index rozvoja e-Governmentu, E-Government Benchmark a iné. V nasledujúcich kapitolách sú v skratke popísané spomínané 3 prieskumy a ich posledné výsledky.
 
 \pkap{Index digitálnej ekonomiky a spoločnosti}
 Európska komisia sleduje pokrok členských štátov v digitálnej oblasti od roku 2014 a každý rok zverejňuje informácie o indexe digitálnej ekonomiky a spoločnosti (Digital Economy and Society Index, DESI). DESI zoraďuje štáty podľa úrovne digitalizácie a zároveň analyzuje ich relatívny pokrok za posledných 5 rokov vzhľadom na ich počiatočnú situáciu.
@@ -235,9 +235,12 @@ Na základe týchto 4  oblastí získavajú krajiny tzv. "skóre eGovernment vys
 }
 
 
-\pkap{Súčasný stav digitálnej verejnej správy v Česku}
+\pkap{Zhrnutie výsledkov prieskumov}
 
-\TODO TODO: zhrnutie predchádzajúcich kapitol - z pohľadu Česka
+Analýza Indexu digitálnej ekonomiky a spoločnosti (DESI), Indexu rozvoja e-governmentu (EGDI) a eGovernment Benchmarku ukazuje, že Česká republika dosahuje pokrok v digitalizácii verejnej správy, no v porovnaní s medzinárodným kontextom, najmä so severskými krajinami a lídrami v EÚ, čelí výzvam v~konektivite, integrácii digitálnych technológií a poskytovaní digitálnych verejných služieb. Čo sa ale týka susedných krajín, ČR si vedie dobre. Severské krajiny a vyspelé členské štáty EÚ vynikajú v inováciách a ponúkaní efektívnych, užívateľsky prívetivých digitálnych služieb, ktoré ČR môže použiť ako model pre zlepšovanie svojich digitálnych služieb. Významná je tiež potreba zamerania sa na cezhraničné digitálne služby, kde ČR môže opäť čerpať z príkladov zo zahraničia.
+
+V súčasnej dobe sa ČR nachádza približne v strede rebríčkov, ktoré hodnotia digitalizáciu, ale iniciatíva "Digitálne Česko" (viac popísaná nižšie) má potenciál posunúť ČR na prednejšie pozície v týchto prieskumoch. Predstavuje sľubný krok smerom k zlepšeniu výkonnosti Českej republiky v digitálnom prostredí, zvýšeniu jej konkurencieschopnosti a zlepšeniu poskytovania digitálnych služieb občanom.
+
 
 %Posunom doby sa stále viac vecí spojených s verejnou správou dá riešiť online. Zamestnávatelia sa stretávajú na pravidelnej báze s rôznymi procesmi nutnými k chodu podniku a potrebujú mať všetko v súlade so zákonmi a pravidlami verejnej správy. Aktuálne to musia všetko riešiť buď osobne na úradoch alebo v tom lepšom prípade online na rôznych portáloch verejnej správy.
 %
@@ -247,9 +250,9 @@ Na základe týchto 4  oblastí získavajú krajiny tzv. "skóre eGovernment vys
 %
 %Táto služba spolu s ďalšími bude uvedená na trh po ukončení realizácie projektu, čo môže výrazne zjednodušiť biznis procesy podnikov. 
 
-\pkap{Súčasný stav digitálnej verejnej správy v zahraničí}
-
-\TODO TODO: zhrnutie predchádzajúcich kapitol - z pohľadu zahraničia
+%\pkap{Súčasný stav digitálnej verejnej správy v zahraničí}
+%
+%\TODO TODO: zhrnutie predchádzajúcich kapitol - z pohľadu zahraničia
 
 %V tejto kapitole a jej podkapitolách je zanalyzovaná a popísaná situácia v krajinách, ktoré sú buď blízko Českej republike (polohou, kultúrou, rozvinutosťou...) alebo krajiny, o ktorých je známe, že nejakým spôsobom v oblasti digitálnych služieb vynikajú.
 %
@@ -270,74 +273,11 @@ Na základe týchto 4  oblastí získavajú krajiny tzv. "skóre eGovernment vys
 
 %\QUES Opravdu musím psát literární rešerši? 
 
-\kap{Metodika}
-
-\TODO TODO: všetko ostatné, zatiaľ len pár kapitol a poznámok
-
-\TODO
-Poznámka: 
-For any type of work to be automated, or indeed digitalised, it must
-at some point be represented visually in a way that is conducive to
-translation into algorithmic instructions for a computer. Hence, the
-digitalisation and automating of work requires a certain textualization
-and abstraction of previously embodied and situated knowledge (Zuboff, 1988, ZDROJ Andersson strana 2 dole).
-
-\pkap{Popis EMMA}
-\TODO dokončiť poriadne
-
-EMMA predstavuje jedinečnú G2B2B platformu a nadväzujúce služby, ktoré sú efektívne, rýchle a \uv{zabudovateľné} do každodenných procesov klientov verejnej správy, hlavne podnikov. Tieto služby sú navrhnuté a poskytované tak, aby sa dali čo najjednoduchšie integrovať do ERP systémov podnikov\footnote{ERP (Enterprise Resource Planning) systém -- interný informačný systém podniku slúžiaci na správu rôznych činností podniku (účtovníctvo, zásobovanie, personalistika...)}. Zároveň by mali tieto služby podporovať podnikové procesy a zaisťovať prostredníctvom zakomponovaných služieb možnosť plniť svoje povinnosti a vymáhať si svoje práva vočí verejnej správe \scr(Asseco, 2023) .
-
-Platforma EMMA poskytuje služby VS pomocou štandardizovaného API\footnote{API (Application Programme Interface) -- webové rozhranie, ktoré umožňuje komunikáciu medzi dvomi rôznymi aplikáciami}, ktoré je jednoducho integrovateľné do ERP systémov. Podniky môžu využívaním platformy EMMA dosiahnuť zníženie administrátorskej záťaže podnikov. Príkladom služby EMMA je \uv{oznámenie o nástupu zamestnanca}. Pri tejto životnej situácii je podnik povinný informovať viaceré subjekty VS, konkrétne ČSSZ, zdravotné poisťovne a MPSV (v prípade zahraničného zamestnanca). Podrobnejšie to bude popísané v kapitolách nižšie.
-
-Obsahom platformy EMMA sú:
-
-\startitemize
-\item{interné služby na správu a prevádzku platformy,}
-\item{nástroje na využívanie služby prostredníctvom Rozhrania na volanie služieb VS,}
-\item{nástroje pre interoperabilitu VS ČR v legislativnom rámci Digital Service Act\footnote{Digital Service Act (Akt o digitálnych službách) -- súbor pravidiel platiacich v celej EÚ, ktorých cieľom je vytvoriť bezpečnejší digitálny priestor, v ktorom budú chránené základné práva všetkých užívateľov digitálnych služieb \scr(Európska komisia, 2022)} a Data Governance Act\footnote{Data Governance Act (Akt o správe dát) -- úsilie zvýšiť dôveru v zdieľanie dát a posilnenie mechanizmov pre zvýšenie dostupnosti dát \scr(Európska komisia, 2022)},}
-\item{modul rozhrania pre G2B2B,}
-\item{služby API pre integráciu.}
-\stopitemize 
-
-\TODO EBSI (https://ec.europa.eu/digital-building-blocks/sites/display/EBSI/Home) (https://assecoce.sharepoint.com/:w:/r/teams/EMMAPEGOV-Analza/Shared%20Documents/Anal%C3%BDza/80%20-%20V%C3%BDstupy/Etapa1%20-%20N%C3%A1vrh%20%C5%99e%C5%A1en%C3%AD/E1.4%20Enterprise%20architektura/EMMA_E1_Enterprise_architektura.docx?d=wa8731ee84cc84c9b9e26b2ac55ed06bf&csf=1&web=1&e=DRJrfT)
-
-\pkap{Popis SAMO}
-
-\TODO prepojenie SAMO a LIDS atd
-
-Názov SAMO vznikol skrátením slov Strategic Asset Management \& Operations system. Ide o súbor integrovaných softvérových riešení, ktoré sú modulárne zložené do komplexného systému. Platforma SAMO slúži na strategickú správu aktív a činností.
-
-Vývoj jednotlivých modulov začal v roku 1991. Počas posledných vyše 30-tich rokov vývoja sa firme Asseco podarilo do rôznych riešení zapojiť množstvo skúseností a best practices.
-
-Platforma SAMO je založená na koncepte SOA \footnote{SOA -- Servisne orientovaná architektúra (Service Oriented Architecture) -- sada princípov a metodológií, ktorá odporúča stavbu aplikácií zo vzájomne nezávislých komponent}. Považuje sa za platformu určenú na efektívne poskytovanie, nie za produkt samotný.
-
-SAMO používa mikroservice prístup k vývoju softvéru. Každá mikroslužba je zameraná na konkrétnu funkčnosť a môže byť vyvíjaná, nasadená a spravovaná nezávisle od ostatných častí aplikácie. To umožňuje flexibilnejšie škálovanie, rýchlejšie nasadzovanie nových funkcionalít a jednoduchšiu údržbu. SAMO je aplikácia poháňaná metadátami, ktoré obsahujú informácie o vzťahoch medzi časťami  dát, popis užívateľského rozhrania, pravidlá, formuláre a pod. \scr(Asseco, 2023)
-
-\pkap{LIDS}
-
-\TODO čo je vlastne LIDS atd (LIDS je metadátový systém, na ktorom je postavené SAMO.)
-
-LIDS je systém kontrolovaný metadátami, s ktorými pracujú jednotlivé časti systému. Hlavnou časťou LIDS metadát sú tzv. feature types. Ide v podstate o nejaký typ objektu reálneho sveta (napr. ft\_osoba, ft\_adresa, ft\_zamestnanec...). Feature type definuje atribúty objektu, môže definovať aj geometriu, symboliku a iné vlastnosti. Tzv. feature je inštanciou feature typu, a teda je to reprezentácia objektu reálneho sveta. Feature nesie informácie o tom, aký je to feature type, sémantické atribúty (id, name, type), jeho miesto v databáze (tzv. databázový kontajner), poprípade symboliku a typ geometrie.
-
-Tieto metadáta sú uložené, prenášané a spravované vo forme nasledujúcich XML dokumentov:
-
-\startitemize
-\item{\start \bf model.xml \stop - hlavný metadátový súbor, v ktorom sú uložené informácie o tzv. feature types (entita SAMO systému), ich atribútoch, číselníkoch a pod.}
-\item{\start \bf presentation.xml \stop - definuje predvolenú symboliku projektu a pod.}
-\item{\start \bf thematization.xml \stop - definuje dynamickú symboliku prvkov (na základe štandardu OpenGIS Symbology Encoding)}
-\item{\start \bf tool.xml \stop - definuje panely nástrojov špecifických pre projekt}
-\item{\start \bf resource.xml \stop - definuje napr. štýly čiar, symboly, fonty, ikony a pod.}
-\item{\start \bf option.xml \stop - definuje voliteľné funkcie systému ako napr. kopírovanie prvkov, derivovanie atribútov, zobraziteľné atribúty...}
-\stopitemize 
-
-Okrem týchto hlavných XML súborov existuje aj množstvo ďalších. Všetky spomínané súbory majú pevne danú štruktúru popísanú v súboroch typu XSD (XML Schema Definiton). 
-
-\pkap{Architektura eGovernmentu - toto neviem, kde zapojiť}
-
-eGovernment je pojem popisujúci modernú digitálnu verejnú správu, ktorá využíva k výkonu svojich právomocí digitálnu infraštruktúru. Táto infraštruktúra realizuje sadu služieb informačných technológií (ICT služieb), ktoré sú zdieľané, dôveryhodné, prepojené, bezpečné, automatizované, efektívne a ľahko používateľné pre užívateľov. Služby eGovernmentu sú určené občanom, firmám, podnikateľom i úradníkom. Synonymami pojmu eGovernment sú "digitálny government" alebo "digitálna verejná správa" \scr(Digitální a informační agentura, 2023).
+\pkap{Architektura eGovernmentu ČR}
+Pojem eGovernment bol už v tejto práci viackrát zmieňovaný. Dá sa povedať, že ide o pojem popisujúci modernú digitálnu verejnú správu, ktorá využíva k výkonu svojich právomocí digitálnu infraštruktúru. Táto infraštruktúra realizuje sadu služieb informačných technológií (ICT služieb), ktoré sú zdieľané, dôveryhodné, prepojené, bezpečné, automatizované, efektívne a ľahko používateľné pre užívateľov. Služby eGovernmentu sú určené občanom, firmám, podnikateľom i úradníkom. Synonymami pojmu eGovernment sú "digitálny government" alebo "digitálna verejná správa" \scr(Digitální a informační agentura, 2023).
 
 \ppkap{Poslanie a vízia eGovernmentu v Českej republike}
-Digitálna verejná správa používa rôzne poskytnuté a dostupné informácie, ktoré automatizovane spracuváva s cieľom obmedziť, respektíve znížt množstvo podania a objemu infomrácií zo straný užívateľov služieb VS.
+Digitálna verejná správa používa rôzne poskytnuté a dostupné informácie, ktoré automatizovane spracuváva s cieľom obmedziť, respektíve znížt množstvo podania a objemu informácií zo straný užívateľov služieb VS.
 
 Poslaním eGovernmentu je: 
 
@@ -347,8 +287,10 @@ Vízia eGovernmentu v ČR do konca horizontu Informačnej koncepcie ČR (viac po
 
 \citat{Česká republika je jednou z popredných krajín v užívateľskej prívetivosti verejnej správy vďaka svojmu klientsky orientovanému prístupu, modernému dizajnu úradných procesov a efektívnemu využívaniu digitálnych a nedigitálnych technológií.} \scr(Digitální a informační agentura, 2023)
 
-\ppkap{Informační koncepce ČR}
-Informační koncepce ČR (ďalej ako IKČR) rozpracováva vyššie spomenutú víziu do rôznych cieľov, ktoré realizujú jednotlivé orgány VS. To, či ciele boli naplnené alebo nie ukazuje stav plnenia zadefinovaných cieľov a pozícia v rebríčku podľa DESI (rozobraté v kapitole 3.1 Index digitálnej ekonomiky a spoločnosti). Všetky povinné subjekty podľa zákona  č. 365/2000 Sb., o informačných systémoch majú povinnosť viesť vlastné informačné koncepcie a vždy ich musia uviesť do súladu s Informačnou koncepciou ČR. Je to prakticky koncepcia rozvoja informačných systémov verejnej správy, ktorú spracováva Ministerstvo vnútra a schvaľuje vláda. Je vypracovaná na základe ustanovenia § 5a, Zákona č. 365/2000 Sb., o informačných systémoch verejnej správy. Jej časti sú najmä:
+\pkap{Informační koncepce ČR}
+Informační koncepce ČR (ďalej ako IKČR) rozpracováva vyššie spomenutú víziu do rôznych cieľov, ktoré realizujú jednotlivé orgány VS. To, či ciele boli naplnené alebo nie ukazuje stav plnenia zadefinovaných cieľov a pozícia v rebríčku podľa DESI (rozobraté v kapitole 3.1 Index digitálnej ekonomiky a spoločnosti). Všetky povinné subjekty podľa zákona  č. 365/2000 Sb., o informačných systémoch majú povinnosť viesť vlastné informačné koncepcie a vždy ich musia uviesť do súladu s Informačnou koncepciou ČR. Je to prakticky koncepcia rozvoja informačných systémov verejnej správy, ktorú spracováva Ministerstvo vnútra a schvaľuje vláda. Je vypracovaná na základe ustanovenia § 5a, Zákona č. 365/2000 Sb., o informačných systémoch verejnej správy. 
+
+Medzi jej hlavné časti patria najmä:
 
 \startitemize
 \item{architektonické principy eGovernmentu a elektronizácie verejnej správy,}
@@ -403,14 +345,152 @@ Služba VS reprezentuje funkciu (činnosť) úradu, ktorá je poskytovaná konkr
 \ppkap{Úkon}
 Úkon je taktiež interakcia medzi klientom a OVM, no v tomto prípade ide len o jednu interakciu, ktorá vedie k ďalšiemu úkonu (resp. k naplneniu výstupu služby, ak sa jedná o koncový úkon). Úkon sa teda dá definovať ako jeden krok, jedna časť služby VS \scr(Digitální a informační agentura, 2023).
 
+\pkap{Digitální Česko}
+Táto kapitola je venovaná iniciatíve Digitálne Česko, keďže to je v tejto práci viackrát zmieňovaný pojem. Ide o ucelenú víziu, ktorá je realizovaná na základe niekoľých koncepcií, plánov a stratégií, ktoré sú v súlade s potrebami ČR a politikou EÚ. Tento projekt pokrýva 3 základné piliere:
+\startitemize
+\item{\start \bf Česko v digitální Evropě \stop -- vládna koncepcia zameriavajúca sa na jednotný digitálny trh v Európe} 
+\item{\start \bf Digitální ekonomika a společnost \stop -- strategický dokument, ktorého cieľom je koordinácia agend z oblastí digitálnej ekonomiky a spoločnosti naprieč verejnou správou, hospodárstvom, sociálnou či akademickou sférou (súvisí aj s kap. 3.1)}
+\item{\start \bf Informační koncepce České republiky \stop (kap. 3.6)}
+\stopitemize
+
+Vláda ČR považuje program Digitálne Česko za súbor stratégií, ktoré vytvárajú predpoklady pre dlhodobú prosperitu krajiny v ére digitálnej transformácie a revolúcie. (Úřad vlády ČR, 2024)
+
 %\pkap[dizajn-system]{Jednotným dizajn manuálom elektronických služieb}
 %haha
+
+\pkap{Projekt EMMA}
+EMMA predstavuje jedinečnú integračnú G2B2B platformu a nadväzujúce služby, ktoré sú efektívne, rýchle a \uv{zabudovateľné} do každodenných procesov klientov verejnej správy, hlavne podnikov. Tieto služby sú navrhnuté a poskytované tak, aby sa dali čo najjednoduchšie integrovať do ERP systémov podnikov\footnote{ERP (Enterprise Resource Planning) systém -- interný informačný systém podniku slúžiaci na správu rôznych činností podniku (účtovníctvo, zásobovanie, personalistika...)}. Zároveň by mali tieto služby podporovať podnikové procesy a zaisťovať prostredníctvom zakomponovaných služieb možnosť plniť svoje povinnosti a vymáhať si svoje práva vočí verejnej správe. \scr(Asseco, 2023)
+
+Hlavným cieľom projektu je vybudovanie EMMA ako súhrn služieb a riešení v oblasti podpory komunikácie komerčného sektoru s verejnou správou a začlenenie do informačných systémov firiem (ERP/FM/CRM systémy).
+
+Cieľovými skupinami sú najmä na skupiny, ktoré potrebujú informačne podporiť komunikáciu subjektov s verejnou správou hlavne v opakujúcich sa, rutinných činnostiach. Ide hlavne o činnosti spojené s vykazovaním, ohlasovaním (za zamestnancov alebo klietov). Medzi konkrétnych cieľových užívateľov patria napríklad personalisti, účtovní a daňoví pracovníci, banky, poisťovne a pod. Potenciálnych zákazníkov možno rozdeliť do dvoch skupín - zákazníci, ktorí nemajú žiaden plnohodnotný ERP systém a zákazníci, ktorí zvažujú zmenu/upgrade používaného ERP systému.
+
+Projekt nadväzuje na Architektonický princíp č. 11: eGovernment jako platforma (Embedded eGovernment) uvedený v IKČR. Architektonické princípy IKČR sú spomenuté v kapitole 3.6. V skratke princíp č. 11 hovorí o tom, že procesy a služby verejnej správy aj s potrebnými technickými nástrojmi musia byť navrhnuté tak, aby organizácie mohli tieto služby jednoducho integrovať do svojich ICT systémov, čo im uľahčí plnenie povinností a využívanie práv voči verejnej správe \scr(Digitální a informační agentura, 2023).
+
+Okrem tohto princípu sa EMMA riadi aj ďalšími procesnými zásadami ustanovenými v IKČR, napr.: 
+
+\startitemize
+\item \start\bf Z6 Riadenie výkonnosti a kvality \stop --  meranie výkonnosti a kvality, princípy merateľnosti a spätnej väzby, pravidelné audity
+\item \start\bf Z7 Riadene zodpovednosti za služby a systémy \stop -- každý proces a služba musí mať svojho vlastníka a garanta
+\item  \start\bf Z8 Riadenie ICT služieb \stop IT podpora riadená katalógom ICT služieb pre interné a externé procesy
+\item \start\bf Z11 Riadenie prínosov a hodnoty \stop -- rozhodovanie založené na ekonomickej výhodnosti, zahŕňa analýzu nákladov, rizík a prínosov, nutnosť spracovania investičného zámeru
+\item \start\bf Z16 Využívanie otvoreného software a štandardov \stop -- preferencia otvoreného softvéru a štandardov, podpora udržateľnosti, rozvoja a bezpečnosti  \scr(Digitální a informační agentura, 2023)
+\stopitemize
+
+Projekt EMMA môže okrem ekonomických prínosov priniesť aj neekonomické a to ako pre klientov, tak i pre ČR a EÚ. Dajú sa identifikovať napr. reputačný prínos ČR, prínos k riešeniu spoločenských výziev EÚ, rozvoj ľudského potenciálu a pod. Zámer projektu zároveň prispieva k naplneniu cieľov Národnej inovačnej stratégie.
+
+\pkap{Platforma SAMO}
+
+
+\kap{Metodika}
+
+\TODO TODO: všetko ostatné, zatiaľ len pár kapitol a poznámok
+
+\TODO
+Poznámka: 
+For any type of work to be automated, or indeed digitalised, it must
+at some point be represented visually in a way that is conducive to
+translation into algorithmic instructions for a computer. Hence, the
+digitalisation and automating of work requires a certain textualization
+and abstraction of previously embodied and situated knowledge (Zuboff, 1988, ZDROJ Andersson strana 2 dole).
+
+\pkap{Popis EMMA}
+\TODO dokončiť poriadne
+
+Platforma EMMA poskytuje služby VS pomocou štandardizovaného API\footnote{API (Application Programme Interface) -- webové rozhranie, ktoré umožňuje komunikáciu medzi dvomi rôznymi aplikáciami}, ktoré je jednoducho integrovateľné do ERP systémov. Podniky môžu využívaním platformy EMMA dosiahnuť zníženie administrátorskej záťaže podnikov. Príkladom služby EMMA je \uv{oznámenie o nástupu zamestnanca}. Pri tejto životnej situácii je podnik povinný informovať viaceré subjekty VS, konkrétne ČSSZ, zdravotné poisťovne a MPSV (v prípade zahraničného zamestnanca). Podrobnejšie to bude popísané v kapitolách nižšie.
+
+Obsahom platformy EMMA sú:
+
+\startitemize
+\item{interné služby na správu a prevádzku platformy,}
+\item{nástroje na využívanie služby prostredníctvom Rozhrania na volanie služieb VS,}
+\item{nástroje pre interoperabilitu VS ČR v legislativnom rámci Digital Service Act\footnote{Digital Service Act (Akt o digitálnych službách) -- súbor pravidiel platiacich v celej EÚ, ktorých cieľom je vytvoriť bezpečnejší digitálny priestor, v ktorom budú chránené základné práva všetkých užívateľov digitálnych služieb \scr(Európska komisia, 2022)} a Data Governance Act\footnote{Data Governance Act (Akt o správe dát) -- úsilie zvýšiť dôveru v zdieľanie dát a posilnenie mechanizmov pre zvýšenie dostupnosti dát \scr(Európska komisia, 2022)},}
+\item{modul rozhrania pre G2B2B,}
+\item{služby API pre integráciu.}
+\stopitemize 
+
+\TODO EBSI (https://ec.europa.eu/digital-building-blocks/sites/display/EBSI/Home) (https://assecoce.sharepoint.com/:w:/r/teams/EMMAPEGOV-Analza/Shared%20Documents/Anal%C3%BDza/80%20-%20V%C3%BDstupy/Etapa1%20-%20N%C3%A1vrh%20%C5%99e%C5%A1en%C3%AD/E1.4%20Enterprise%20architektura/EMMA_E1_Enterprise_architektura.docx?d=wa8731ee84cc84c9b9e26b2ac55ed06bf&csf=1&web=1&e=DRJrfT)
+
+\pkap{Popis SAMO}
+
+\TODO prepojenie SAMO a LIDS atd
+
+Názov SAMO vznikol skrátením slov Strategic Asset Management \& Operations system. Ide o súbor integrovaných softvérových riešení, ktoré sú modulárne zložené do komplexného systému. Platforma SAMO slúži na strategickú správu aktív a činností.
+
+Vývoj jednotlivých modulov začal v roku 1991. Počas posledných vyše 30-tich rokov vývoja sa firme Asseco podarilo do rôznych riešení zapojiť množstvo skúseností a best practices.
+
+Platforma SAMO je založená na koncepte SOA \footnote{SOA -- Servisne orientovaná architektúra (Service Oriented Architecture) -- sada princípov a metodológií, ktorá odporúča stavbu aplikácií zo vzájomne nezávislých komponent}. Považuje sa za platformu určenú na efektívne poskytovanie, nie za produkt samotný.
+
+SAMO používa mikroservice prístup k vývoju softvéru. Každá mikroslužba je zameraná na konkrétnu funkčnosť a môže byť vyvíjaná, nasadená a spravovaná nezávisle od ostatných častí aplikácie. To umožňuje flexibilnejšie škálovanie, rýchlejšie nasadzovanie nových funkcionalít a jednoduchšiu údržbu. SAMO je aplikácia poháňaná metadátami, ktoré obsahujú informácie o vzťahoch medzi časťami  dát, popis užívateľského rozhrania, pravidlá, formuláre a pod. \scr(Asseco, 2023)
+
+\pkap{LIDS}
+
+\TODO čo je vlastne LIDS atd (LIDS je metadátový systém, na ktorom je postavené SAMO.)
+
+LIDS je systém kontrolovaný metadátami, s ktorými pracujú jednotlivé časti systému. Hlavnou časťou LIDS metadát sú tzv. feature types. Ide v podstate o nejaký typ objektu reálneho sveta (napr. ft\_osoba, ft\_adresa, ft\_zamestnanec...). Feature type definuje atribúty objektu, môže definovať aj geometriu, symboliku a iné vlastnosti. Tzv. feature je inštanciou feature typu, a teda je to reprezentácia objektu reálneho sveta. Feature nesie informácie o tom, aký je to feature type, sémantické atribúty (id, name, type), jeho miesto v databáze (tzv. databázový kontajner), poprípade symboliku a typ geometrie.
+
+Tieto metadáta sú uložené, prenášané a spravované vo forme nasledujúcich XML dokumentov:
+
+\startitemize
+\item{\start \bf model.xml \stop - hlavný metadátový súbor, v ktorom sú uložené informácie o tzv. feature types (entita SAMO systému), ich atribútoch, číselníkoch a pod.}
+\item{\start \bf presentation.xml \stop - definuje predvolenú symboliku projektu a pod.}
+\item{\start \bf thematization.xml \stop - definuje dynamickú symboliku prvkov (na základe štandardu OpenGIS Symbology Encoding)}
+\item{\start \bf tool.xml \stop - definuje panely nástrojov špecifických pre projekt}
+\item{\start \bf resource.xml \stop - definuje napr. štýly čiar, symboly, fonty, ikony a pod.}
+\item{\start \bf option.xml \stop - definuje voliteľné funkcie systému ako napr. kopírovanie prvkov, derivovanie atribútov, zobraziteľné atribúty...}
+\stopitemize 
+
+Okrem týchto hlavných XML súborov existuje aj množstvo ďalších. Všetky spomínané súbory majú pevne danú štruktúru popísanú v súboroch typu XSD (XML Schema Definiton). 
 
 \pkap{Popis metodiky, analýzy a návrhu}
 
 \TODO
 TODO
 
+\kap{Poznámky z konzultácie}
+- kompetenčný model agendy VS
+
+- centrálne zdielane služby
+
+- porovnanie voči svetu - u nás (v čr) sú prenesená pusobnost a spravna pusobnost obcí
+stavebné řízení - obec povoluje schvalovanie stavieb, ale obec môže byť dotknutá riadením (takže je vlastne schvalovatel aj účastník řízení)
+
+- informačný koncepce, národný arch plán a rámec
+
+- pôvodný zámer EMMA (vize a tak)
+
+- právo na digitálne služby -> malo by priniest zlepšienie egov
+
+- Jirka ohladom SAMO
+
+\kap{Výsledky}
+
+\pkap{Model požiadaviek}
+
+\TODO
+TODO
+
+\pkap{Use case model}
+
+\TODO
+TODO
+
+\pkap{Sekvenčný diagram}
+
+\TODO
+TODO
+
+\pkap{Konceptuálny dátový model}
+
+\TODO
+TODO
+
+\pkap{Logický dátový model pre SAMO}
+
+\TODO
+TODO
+
+\pkap{Výber služby, ktorá bude implementovaná}
 \pkap{Charakteristika vybraných služieb verejnej správy}
 Na to, aby bolo možné vybrať vhodné služby VS k analýze a ďalším úkonom je potreba analyzovať rôzne životné situácie spojené s verejnou správou. V nasledujúcej tabuľke (viď \in{tabuľka}[situacie]) je zobrazený zoznam takýchto situácií spolu so službou a úradom, ktoré do riešenia danej situácie vstupujú.
 
@@ -480,55 +560,6 @@ Na to, aby bolo možné vybrať vhodné služby VS k analýze a ďalším úkono
   }
 
 
-
-
-\TODO
-TODO
-
-\kap{Poznámky z konzultácie}
-- kompetenčný model agendy VS
-
-- centrálne zdielane služby
-
-- porovnanie voči svetu - u nás (v čr) sú prenesená pusobnost a spravna pusobnost obcí
-stavebné řízení - obec povoluje schvalovanie stavieb, ale obec môže byť dotknutá riadením (takže je vlastne schvalovatel aj účastník řízení)
-
-- informačný koncepce, národný arch plán a rámec
-
-- pôvodný zámer EMMA (vize a tak)
-
-- právo na digitálne služby -> malo by priniest zlepšienie egov
-
-- Jirka ohladom SAMO
-
-\kap{Výsledky}
-
-\pkap{Model požiadaviek}
-
-\TODO
-TODO
-
-\pkap{Use case model}
-
-\TODO
-TODO
-
-\pkap{Sekvenčný diagram}
-
-\TODO
-TODO
-
-\pkap{Konceptuálny dátový model}
-
-\TODO
-TODO
-
-\pkap{Logický dátový model pre SAMO}
-
-\TODO
-TODO
-
-\pkap{Výber služby, ktorá bude implementovaná}
 
 \TODO
 TODO
@@ -744,11 +775,11 @@ TODO
 %https://desapublications.un.org/sites/default/files/publications/2022-09/Web%20version%20E-Government%202022.pdf
 
 \publW{
- \autorkorp{Slovensko.sk}
- \nazev{Ústredný portál verejnej správy}
- \online{2024-01-29}
- \www{https://www.slovensko.sk/sk/titulna-stranka}
- \nazevdok{Slovensko.sk}
+ \autorkorp{Úřad vlády ČR}
+ \nazev{Tři pilíře Digitálního Česka}
+ \online{2024-03-01}
+ \www{https://digitalnicesko.gov.cz/vize/}
+ \nazevdok{Digitální Česko}
  \rok{©~2024}
 }
 
